--- a/src/index.html
+++ b/src/index.html
@@ -5,21 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Simple Calendar</title>
-
-  <link rel="stylesheet" href="style.css">
-  <script defer src="/node_modules/@fortawesome/fontawesome-free/js/all.js"></script>
 </head>
 <body>
   
   <div class="container">
     <div class="calendar">
       <div class="month">
-        <i class="fas fa-angle-left" id="prevMonth"></i>
+        <span class="prevMonth">
+          <i class="fas fa-angle-left"></i>
+        </span>
         <div class="date">
           <h1></h1>
           <p></p>
         </div>
-        <i class="fas fa-angle-right" id="nextMonth"></i>
+        <div class="nextMonth">
+          <i class="fas fa-angle-right"></i>
+        </div>
       </div>
       <div class="weekdays">
         <div>Mon</div>
@@ -34,6 +35,6 @@
     </div>
   </div>
 
-  <script src="./calendar.js"></script>
+  <script type="module" src="./js/app.js"></script>
 </body>
 </html>
